--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,3 @@
-include .pylintrc Makefile *.txt
+include .pylintrc Makefile *.txt README.rst COPYING.txt
+recursive-include geordi/static *
+recursive-include geordi/templates *
