--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-include .pylintrc Makefile *.txt README.rst COPYING.txt
+include .pylintrc Makefile *.txt README.rst
 recursive-include geordi/static *
 recursive-include geordi/templates *
